# stock_monitor

./: .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CODE_IMPROVEMENT_PROGRESS.md  CODE_REVIEW_EXECUTIVE_SUMMARY.md  CODE_REVIEW_REPORT.md  GITHUB_ACTIONS.md  IMPLEMENTATION_GUIDE.md  P1_4_PHASE_1_COMPLETION_SUMMARY.md  PACKAGING_FIX.md  PHASE1_ARCHITECTURE_REVIEW.md  PHASE2_QUANT_ENGINE_REVIEW.md  PHASE3_ALERT_DELIVERY_REVIEW.md  README.md  REVIEW_QUICK_REFERENCE.md  analyze_stocks.py  analyze_with_mootdx.py  auction_test_output.txt  build.py  build_config.py  cache.md  check_akshare.py  check_excel.py  check_mootdx_api.py  clean_stock.txt  config.json  debug_changelog.py  draw_kline.py  draw_kline_all.py  draw_kline_dynamic.py  fetch_mootdx_data.py  final_data_fetcher.py  git_diff_files.txt  git_diff_full.txt  implementation_plan.md  ion) 更新到 v1.3.6  jianyi.md  local_build_workflow.py  main.py  (+75 more)
.omo/: LEARNED.md
PRD/: backtest_and_ui_sync_plan_0327.md  stock_monitor_v2_requirements.md  stock_monitor_v2_roadmap.md
analysis_reports/: all_stocks_market_data.xlsx  backtest_results.json  confluence_results.json  deep_quant_data.json  rsrs_backtest_results.json  stock_analysis_report.md  stock_data_summary.xlsx  stock_export_report.xlsx  stock_quant_report.xlsx  watchlist_indicators_report.xlsx
archive/: add_constants_import.py
docs/: BUGFIX_NOTIFIER_DISPATCH_METHOD.md  BUGFIX_UI_THROTTLE_INITIALIZATION.md  CONTRIBUTING.md  DAILY_REPORT_FEATURE.md  DATETIME_ERROR_FIX_REPORT.md  P1_2_PERFORMANCE_OPTIMIZATION_REPORT.md  P1_3_COVERAGE_EXPANSION_REPORT.md  P1_4_ARCHITECTURE_REORGANIZATION_REPORT.md  P1_4_MIGRATION_GUIDE.md  P1_4_PROGRESS_SUMMARY.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PROJECT_PROGRESS_SUMMARY.md  README.md  RUNTIME_BUGFIXES_REPORT.md  SETTINGS_DIALOG_REFACTORING_REPORT.md  SETTINGS_TAB_FINAL_REPORT.md  SETTINGS_TAB_OPTIMIZATION_PLAN.md  SETTINGS_TAB_OPTIMIZATION_REPORT.md  STYLEGUIDE.md  UI_LAYOUT_OPTIMIZATION_PROPOSAL.md  UI_QUICK_OPTIMIZATION_REPORT.md  test_local_update_guide.md  自选股历史数据与指标导出指南.md  量化推送内容深度分析.md  量化预警防抖动实施总结.md  量化预警防抖动指南.md
scripts/: __init__.py  build.py  prepare_base_db.py  smoke_runner.py
skills/: .skills_store_lock.json
stock_monitor/: __init__.py  api_documentation.md  development_guide.md  main.py  project_structure.md  version.py
tests/: conftest.py  manual_test_market_data.py  market_snapshot_sample.json  performance_test.py  test_app_updater.py  test_auto_start.py  test_backtest_engine.py  test_base_worker.py  test_cache_manager.py  test_cache_warmer_p1_2.py  test_config.py  test_container.py  test_core_fetcher.py  test_core_service.py  test_core_validator.py  test_dark_trade_stats.py  test_dark_trade_stats_integration.py  test_di_container.py  test_event_bus.py  test_exception_handler_p1.py  test_exception_handling.py  test_fetcher.py  test_financial_filter.py  test_health_check.py  test_helpers.py  test_integration_architecture.py  test_lru_cache.py  test_main.py  test_market_bar.py  (+29 more)
(+225 files in other folders)
