[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock_monitor"
version = "2.9.6"
description = "A real-time stock monitoring application for A-shares"
authors = [
    {name = "Stock Monitor Team"}
]
dependencies = [
    "PyQt6>=6.0.0",
    "easyquotation>=0.7.7",
    "pypinyin>=0.44.0",
    "pywin32>=304",
    "packaging>=21.3",
    "requests>=2.28.1",
    "pandas>=1.3.0",
    "zhconv>=1.4.1",
    "openpyxl>=3.0.7",
]
requires-python = ">=3.9"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = ["E501", "C901", "E402", "B007"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
